--- a/config/lwa_corr_config.yaml
+++ b/config/lwa_corr_config.yaml
@@ -1,4 +1,5 @@
 fengines:
+    snap2s_inuse: ['snap09', 'snap10', 'snap11']
     chans_per_packet: 96
     snap01:
         ants: [0, 32]
@@ -113,3 +114,14 @@ xengines:
     10.41.0.40-10000: [3520, 3616]
     10.41.0.40-20000: [3616, 3712]
 
+arx:
+    adrs: [35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45]
+    config: 1
+
+xhosts = [f'lxdlwagpu{i:02}' for i in range(1, 9)] # 4.3 MHz subband per pipeline pair
+xnpipeline = 4  # x-eng
+x_dest_corr_ip = ['10.41.0.25', '10.41.0.25', '10.41.0.41', '10.41.0.41']
+x_dest_corr_port = [10001+i//4 for i in range(32)]
+x_dest_beam_ip = ['10.41.0.19'] + ['0.0.0.0']*15
+x_dest_beam_port = [20001]
+recorders = ['slow'] # slow, fast, power, voltage
