cleaning up. Controller can be used to parse yaml outside of system

--- a/config/lwa_corr_config.yaml
+++ b/config/lwa_corr_config.yaml
@@ -1,5 +1,5 @@
 arx:
-    adrs: [35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45]
+    adrs: [24, 25, 26, 27, 28, 29, 30, 31, 32, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45]
     preset: 1
 
 fengines:
@@ -119,10 +119,10 @@ xengines:
     10.41.0.24-20000: [3424, 3520]
     10.41.0.40-10000: [3520, 3616]
     10.41.0.40-20000: [3616, 3712]
-  x_dest_corr_ip = ['10.41.0.25', '10.41.0.25', '10.41.0.41', '10.41.0.41']
-  x_dest_corr_port = [10001, 10001, 10001, 10001, 10002, 10002, 10002, 10002, 10003, 10003, 10003, 10003, 10004, 10004, 10004, 10004, 10005, 10005, 10005, 10005, 10006, 10006, 10006, 10006, 10007, 10007, 10007, 10007, 10008, 10008, 10008, 10008]
-  x_dest_beam_ip = ['10.41.0.19'] + ['0.0.0.0'] + ['0.0.0.0'] + ['0.0.0.0'] + ['0.0.0.0'] + ['0.0.0.0'] + ['0.0.0.0'] + ['0.0.0.0'] + ['0.0.0.0'] + ['0.0.0.0'] + ['0.0.0.0'] + ['0.0.0.0'] + ['0.0.0.0'] + ['0.0.0.0'] + ['0.0.0.0'] + ['0.0.0.0']
-  x_dest_beam_port = [20001]
+  x_dest_corr_ip: ['10.41.0.25', '10.41.0.25', '10.41.0.41', '10.41.0.41']
+  x_dest_corr_port: [10001, 10001, 10001, 10001, 10002, 10002, 10002, 10002, 10003, 10003, 10003, 10003, 10004, 10004, 10004, 10004, 10005, 10005, 10005, 10005, 10006, 10006, 10006, 10006, 10007, 10007, 10007, 10007, 10008, 10008, 10008, 10008]
+  x_dest_beam_ip: ['10.41.0.19', '0.0.0.0', '0.0.0.0', '0.0.0.0', '0.0.0.0', '0.0.0.0', '0.0.0.0', '0.0.0.0', '0.0.0.0', '0.0.0.0', '0.0.0.0', '0.0.0.0', '0.0.0.0', '0.0.0.0', '0.0.0.0', '0.0.0.0']
+  x_dest_beam_port: [20001]
 
 dr:
     recorders = ['slow'] # slow, fast, power, voltage
