--- a/config/lwa_corr_config.yaml
+++ b/config/lwa_corr_config.yaml
@@ -122,6 +122,8 @@ xengines:
   x_dest_corr_name: ["lxdlwagpu09"]
   x_dest_beam_ip: ["10.41.0.19", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0"]
   x_dest_beam_port: [20001]
+  calfiles: "/home/ubuntu/mmanders/caltables/latest/*.bcal"
+  update_interval: 15  # beamformer tracking update cadence in seconds
 
 drip_mapping:
   lxdlwagpu09: ["10.41.0.25", "10.41.0.72"]
