--- a/config/lwa_corr_config.yaml
+++ b/config/lwa_corr_config.yaml
@@ -1,3 +1,8 @@
+etcd:
+#    host: "etcdv3service"  # standard
+    host: "lxdlwacr"  # temp
+    port: "2379"
+
 arx:
     adrs: [11, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45]
     preset: 1
