fix to beamformer config

--- a/config/lwa_config.yaml
+++ b/config/lwa_config.yaml
@@ -125,8 +125,8 @@ xengines:
     10.41.0.40-10000: [3520, 3616]
     10.41.0.40-20000: [3616, 3712]
   x_dest_corr_name: ["lxdlwagpu09"]
-  x_dest_beam_ip: ["10.41.0.25", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0"]
-  x_dest_beam_port: [20001]
+  x_dest_beam_ip: ["10.41.0.25", "10.41.0.25", "10.41.0.25", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0"]
+  x_dest_beam_port: [20001, 20002, 20003]
   calfiles: "/home/ubuntu/mmanders/caltables/latest/*.bcal"
   update_interval: 15  # beamformer tracking update cadence in seconds
 
