alignment with jayce recommendations. ezdr to mcs control of recorders. control over etcd location

--- a/config/lwa_config.yaml
+++ b/config/lwa_config.yaml
@@ -125,6 +125,8 @@ xengines:
     10.41.0.40-10000: [3520, 3616]
     10.41.0.40-20000: [3616, 3712]
   x_dest_corr_name: ["lxdlwagpu09"]
+  x_dest_corr_slow_port: [10001, 10001, 10002, 10002]
+  x_dest_corr_fast_port: [11001, 11001, 11002, 11002]
   x_dest_beam_ip: ["10.41.0.25", "10.41.0.25", "10.41.0.25", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0", "0.0.0.0"]
   x_dest_beam_port: [20001, 20002, 20003]
   calfiles: "/home/ubuntu/mmanders/caltables/latest/*.bcal"
