clean up of bf control

--- a/config/lwa_config.yaml
+++ b/config/lwa_config.yaml
@@ -1,6 +1,6 @@
 etcd:
-#    host: "etcdv3service"  # standard
-    host: "lxdlwacr"  # temp
+    host: "etcdv3service"  # standard
+    #host: "lxdlwacr"  # temp
     port: "2379"
 
 arx:
