--- a/config/lwa_config_calim.yaml
+++ b/config/lwa_config_calim.yaml
@@ -65,70 +65,70 @@ xengines:
   nxpipeline: 4
   arp:
     # lwa-gpu01
+    10.41.0.65: 0x043f72d0b112
     10.41.0.18: 0x043f72d0b10e
-    10.41.0.34: 0x043f72d0b112
     # lwa-gpu02
+    10.41.0.66: 0x043f72d0b106
     10.41.0.17: 0x043f72d0b116
-    10.41.0.33: 0x043f72d0b106
     # lwa-gpu03
+    10.41.0.67: 0x043f72d0b0e2
     10.41.0.19: 0x043f72d0b0f6
-    10.41.0.35: 0x043f72d0b0e2
     # lwa-gpu04
+    10.41.0.68: 0x043f72dfc1f4
     10.41.0.20: 0x043f72ab3750
-    10.41.0.36: 0x043f72dfc1f4
     # lwa-gpu05
+    10.41.0.69: 0x043f72dfc2e4
     10.41.0.21: 0x043f72dfc2a0
-    10.41.0.37: 0x043f72dfc2e4
     # lwa-gpu06
+    10.41.0.70: 0x043f72dfc1d4
     10.41.0.22: 0x043f72dfc2e8
-    10.41.0.38: 0x043f72dfc1d4
     # lwa-gpu07
+    10.41.0.71: 0x043f72dfc308
     10.41.0.23: 0x043f72dfc2d8
-    10.41.0.39: 0x043f72dfc308
     # lwa-gpu08
+    10.41.0.72: 0x043f72dfc300
     10.41.0.24: 0x043f72dfc2a8
-    10.41.0.40: 0x043f72dfc300
   chans:
     # lwa-gpu01
-    10.41.0.18-10000: [ 640,  736]
-    10.41.0.18-20000: [ 736,  832]
-    10.41.0.34-10000: [ 832,  928]
-    10.41.0.34-20000: [ 928, 1024]
+    10.41.0.65-10000: [ 640,  736]
+    10.41.0.65-20000: [ 736,  832]
+    10.41.0.18-10000: [ 832,  928]
+    10.41.0.18-20000: [ 928, 1024]
     # lwa-gpu02
-    10.41.0.17-10000: [1024, 1120]
-    10.41.0.17-20000: [1120, 1216]
-    10.41.0.33-10000: [1216, 1312]
-    10.41.0.33-20000: [1312, 1408]
+    10.41.0.66-10000: [1024, 1120]
+    10.41.0.66-20000: [1120, 1216]
+    10.41.0.17-10000: [1216, 1312]
+    10.41.0.17-20000: [1312, 1408]
     # lwa-gpu03
-    10.41.0.19-10000: [1408, 1504]
-    10.41.0.19-20000: [1504, 1600]
-    10.41.0.35-10000: [1600, 1696]
-    10.41.0.35-20000: [1696, 1792]
+    10.41.0.67-10000: [1408, 1504]
+    10.41.0.67-20000: [1504, 1600]
+    10.41.0.19-10000: [1600, 1696]
+    10.41.0.19-20000: [1696, 1792]
     # lwa-gpu04
-    10.41.0.20-10000: [1792, 1888]
-    10.41.0.20-20000: [1888, 1984]
-    10.41.0.36-10000: [1984, 2080]
-    10.41.0.36-20000: [2080, 2176]
+    10.41.0.68-10000: [1792, 1888]
+    10.41.0.68-20000: [1888, 1984]
+    10.41.0.20-10000: [1984, 2080]
+    10.41.0.20-20000: [2080, 2176]
     # lwa-gpu05
-    10.41.0.21-10000: [2176, 2272]
-    10.41.0.21-20000: [2272, 2368]
-    10.41.0.37-10000: [2368, 2464]
-    10.41.0.37-20000: [2464, 2560]
+    10.41.0.69-10000: [2176, 2272]
+    10.41.0.69-20000: [2272, 2368]
+    10.41.0.21-10000: [2368, 2464]
+    10.41.0.21-20000: [2464, 2560]
     # lwa-gpu06
-    10.41.0.22-10000: [2560, 2656]
-    10.41.0.22-20000: [2656, 2752]
-    10.41.0.38-10000: [2752, 2848]
-    10.41.0.38-20000: [2848, 2944]
+    10.41.0.70-10000: [2560, 2656]
+    10.41.0.70-20000: [2656, 2752]
+    10.41.0.22-10000: [2752, 2848]
+    10.41.0.22-20000: [2848, 2944]
     # lwa-gpu07
-    10.41.0.23-10000: [2944, 3040]
-    10.41.0.23-20000: [3040, 3136]
-    10.41.0.39-10000: [3136, 3232]
-    10.41.0.39-20000: [3232, 3328]
+    10.41.0.71-10000: [2944, 3040]
+    10.41.0.71-20000: [3040, 3136]
+    10.41.0.23-10000: [3136, 3232]
+    10.41.0.23-20000: [3232, 3328]
     # lwa-gpu08
-    10.41.0.24-10000: [3328, 3424]
-    10.41.0.24-20000: [3424, 3520]
-    10.41.0.40-10000: [3520, 3616]
-    10.41.0.40-20000: [3616, 3712]
+    10.41.0.72-10000: [3328, 3424]
+    10.41.0.72-20000: [3424, 3520]
+    10.41.0.24-10000: [3520, 3616]
+    10.41.0.24-20000: [3616, 3712]
   x_dest_corr_name: ["lwacalim01", "lwacalim02", "lwacalim03", "lwacalim04", "lwacalim05", "lwacalim06", "lwacalim07", "lwacalim08"]  # where gpu servers send data (usually maps one-to-one from gpu to calim node)
   x_dest_corr_slow_port: [10001, 10001, 10002, 10002]
   x_dest_corr_fast_port: [11001, 11001, 11002, 11002]
@@ -150,4 +150,4 @@ drip_mapping:
 
 # Data recorder configuration
 dr:
-  recorders: ["dr1", "drvs"]  # Supported modes "drvs" (slow vis), "drvf" (fast vis), "dr1" (power beam)
+  recorders: ['drvs']  # Supported modes "drvs" (slow vis), "drvf" (fast vis), "dr1" (power beam)
