fix to snap2 list and removing "snap12"

--- a/config/lwa_config_calim.yaml
+++ b/config/lwa_config_calim.yaml
@@ -12,51 +12,51 @@ arx:
 
 # configuration of F-engines running on SNAP2s
 fengines:
-    snap2s_inuse: ["snap02", "snap03", "snap04", "snap05", "snap06", "snap07", "snap08", "snap09", "snap10", "snap11"]
+    snap2s_inuse: ["snap01", "snap02", "snap03", "snap04", "snap05", "snap06", "snap07", "snap08", "snap09", "snap10", "snap11"]
     chans_per_packet: 96
     snap01:
         ants: [0, 32]
-        gbe: "10.41.0.101"
+        gbe: '10.41.0.101'
+        source_port: 10000
+    snap02:
+        ants: [32, 64]
+        gbe: '10.41.0.102'
         source_port: 10000
     snap03:
-        ants: [32, 64]
-        gbe: "10.41.0.102"
+        ants: [64, 96]
+        gbe: '10.41.0.103'
         source_port: 10000
     snap04:
-        ants: [64, 96]
-        gbe: "10.41.0.103"
+        ants: [96, 128]
+        gbe: '10.41.0.104'
         source_port: 10000
     snap05:
-        ants: [96, 128]
-        gbe: "10.41.0.104"
+        ants: [128, 160]
+        gbe: '10.41.0.105'
         source_port: 10000
     snap06:
-        ants: [128, 160]
-        gbe: "10.41.0.105"
+        ants: [160, 192]
+        gbe: '10.41.0.106'
         source_port: 10000
     snap07:
-        ants: [160, 192]
-        gbe: "10.41.0.106"
+        ants: [192, 224]
+        gbe: '10.41.0.107'
         source_port: 10000
     snap08:
-        ants: [192, 224]
-        gbe: "10.41.0.107"
+        ants: [224, 256]
+        gbe: '10.41.0.108'
         source_port: 10000
     snap09:
-        ants: [224, 256]
-        gbe: "10.41.0.108"
+        ants: [256, 288]
+        gbe: '10.41.0.109'
         source_port: 10000
     snap10:
-        ants: [256, 288]
-        gbe: "10.41.0.109"
+        ants: [288, 320]
+        gbe: '10.41.0.110'
         source_port: 10000
     snap11:
-        ants: [288, 320]
-        gbe: "10.41.0.110"
-        source_port: 10000
-    snap12:
         ants: [320, 352]
-        gbe: "10.41.0.111"
+        gbe: '10.41.0.111'
         source_port: 10000
 
 # configuration of x-engines (correlator beamformers) running on GPUs
