--- a/config/lwa_config_calim.yaml
+++ b/config/lwa_config_calim.yaml
@@ -1,241 +1,1 @@
-# configuration of etcd server for monitor and control
-
-etcd:
-    host: "etcdv3service"  # standard service location
-    #host: "lxdlwacr"  # temporary service location
-    port: "2379"
-
-# configuration of ARX
-arx:
-    adrs: [11, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45]
-    preset: 1  # preset of 0, 1, 2 are supported. each intended for specific scenarios
-
-# configuration of F-engines running on SNAP2s
-fengines:
-    snap2s_inuse: ["snap01", "snap02", "snap03", "snap04", "snap05", "snap06", "snap07", "snap08", "snap09", "snap10", "snap11"]
-    fft_shift: 2047
-    eq_coeffs:
-         [190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 190.53125,
-         190.53125, 190.53125, 190.53125, 190.53125, 190.53125, 183.875  ,
-         178.71875, 173.4375 , 167.     , 162.0625 , 158.375  , 153.40625,
-         148.71875, 146.25   , 143.65625, 139.9375 , 136.5    , 135.0625 ,
-         132.59375, 129.     , 127.75   , 125.90625, 123.75   , 121.78125,
-         120.1875 , 119.     , 116.46875, 114.8125 , 113.59375, 111.21875,
-         109.34375, 108.21875, 106.5625 , 104.90625, 102.9375 , 101.90625,
-         100.0625 ,  97.78125,  96.375  ,  95.375  ,  93.4375 ,  91.75   ,
-         90.09375,  88.84375,  86.78125,  84.96875,  83.6875 ,  82.5625 ,
-         80.9375 ,  79.21875,  77.625  ,  76.75   ,  75.15625,  73.90625,
-         72.25   ,  70.71875,  69.71875,  68.84375,  67.34375,  66.0625 ,
-         65.1875 ,  64.6875 ,  63.21875,  62.09375,  61.625  ,  60.25   ,
-         59.46875,  58.71875,  57.96875,  57.3125 ,  56.5    ,  55.84375,
-         55.4375 ,  54.65625,  54.0625 ,  53.40625,  53.     ,  52.65625,
-         52.375  ,  51.90625,  51.625  ,  51.375  ,  51.25   ,  51.0625 ,
-         50.875  ,  50.84375,  50.84375,  50.84375,  50.875  ,  50.96875,
-         51.     ,  51.09375,  51.1875 ,  51.4375 ,  51.625  ,  51.90625,
-         52.21875,  52.5    ,  52.84375,  53.28125,  53.46875,  53.90625,
-         54.34375,  54.8125 ,  55.3125 ,  55.75   ,  56.3125 ,  56.71875,
-         57.21875,  57.875  ,  58.5    ,  58.9375 ,  59.375  ,  60.125  ,
-         60.6875 ,  61.28125,  61.84375,  62.375  ,  62.96875,  63.5625 ,
-         64.5625 ,  65.09375,  65.6875 ,  66.5    ,  67.125  ,  68.     ,
-         68.34375,  69.125  ,  69.6875 ,  70.34375,  71.09375,  71.65625,
-         72.25   ,  72.90625,  73.5625 ,  74.     ,  74.8125 ,  75.59375,
-         76.1875 ,  76.625  ,  77.46875,  78.28125,  78.78125,  79.3125 ,
-         80.     ,  80.84375,  81.40625,  82.0625 ,  82.8125 ,  83.375  ,
-         84.     ,  84.34375,  85.28125,  86.09375,  86.8125 ,  87.59375,
-         88.0625 ,  88.78125,  89.21875,  90.     ,  90.84375,  91.28125,
-         91.78125,  92.65625,  93.3125 ,  94.25   ,  94.90625,  95.75   ,
-         96.59375,  97.09375,  98.15625,  98.84375,  99.53125, 100.5625 ,
-         101.25   , 102.0625 , 102.625  , 103.53125, 104.3125 , 104.875  ,
-         105.96875, 106.46875, 107.28125, 107.875  , 108.625  , 109.84375,
-         110.15625, 111.     , 111.875  , 112.5    , 113.125  , 113.65625,
-         114.4375 , 115.21875, 115.875  , 116.625  , 117.28125, 118.09375,
-         118.65625, 119.5625 , 120.03125, 120.4375 , 121.0625 , 121.71875,
-         122.53125, 123.125  , 123.84375, 124.8125 , 125.53125, 126.125  ,
-         126.96875, 127.78125, 128.53125, 129.4375 , 130.21875, 130.875  ,
-         131.625  , 132.1875 , 132.8125 , 133.53125, 134.34375, 135.03125,
-         135.65625, 136.15625, 137.     , 137.65625, 137.96875, 139.03125,
-         140.15625, 140.625  , 141.375  , 142.4375 , 143.25   , 143.96875,
-         144.875  , 145.46875, 146.375  , 147.0625 , 147.75   , 148.84375,
-         149.46875, 150.1875 , 151.28125, 151.96875, 152.5625 , 153.15625,
-         154.28125, 154.75   , 155.4375 , 156.1875 , 157.09375, 157.5625 ,
-         158.4375 , 159.4375 , 160.09375, 160.78125, 161.9375 , 162.90625,
-         163.71875, 164.65625, 165.09375, 165.875  , 166.65625, 167.15625,
-         168.46875, 169.3125 , 169.96875, 171.     , 171.6875 , 172.59375,
-         173.0625 , 173.59375, 174.5625 , 175.53125, 176.28125, 177.     ,
-         178.40625, 179.3125 , 179.8125 , 181.0625 , 181.9375 , 182.90625,
-         183.65625, 184.71875, 185.25   , 186.375  , 187.625  , 188.625  ,
-         189.8125 , 190.59375, 191.65625, 193.125  , 194.     , 195.25   ,
-         196.53125, 197.1875 , 198.125  , 199.46875, 200.8125 , 201.875  ,
-         202.78125, 204.5625 , 205.9375 , 206.21875, 207.71875, 209.5    ,
-         210.5625 , 212.25   , 213.5    , 214.875  , 216.3125 , 218.59375,
-         219.625  , 220.875  , 222.6875 , 224.3125 , 226.09375, 227.84375,
-         229.65625, 231.40625, 232.875  , 234.25   , 235.46875, 238.1875 ,
-         239.25   , 241.25   , 243.0625 , 244.875  , 247.28125, 249.96875,
-         252.375  , 254.03125, 258.4375 , 260.34375, 263.09375, 265.78125,
-         270.     , 273.375  , 277.5    , 280.6875 , 285.46875, 291.53125,
-         295.53125, 300.90625, 308.8125 , 316.71875, 325.84375, 335.34375,
-         347.75   , 362.3125 , 376.25   , 395.5    , 418.75   , 444.75   ,
-         475.65625, 479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 ,
-         479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 ,
-         479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 ,
-         479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 ,
-         479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 ,
-         479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 ,
-         479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 ,
-         479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 ,
-         479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 ,
-         479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 ,
-         479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 , 479.6875 ,
-         479.6875 , 479.6875]
-    chans_per_packet: 96
-    snap01:
-        ants: [0, 32]
-        gbe: '10.41.0.101'
-        source_port: 10000
-    snap02:
-        ants: [32, 64]
-        gbe: '10.41.0.102'
-        source_port: 10000
-    snap03:
-        ants: [64, 96]
-        gbe: '10.41.0.103'
-        source_port: 10000
-    snap04:
-        ants: [96, 128]
-        gbe: '10.41.0.104'
-        source_port: 10000
-    snap05:
-        ants: [128, 160]
-        gbe: '10.41.0.105'
-        source_port: 10000
-    snap06:
-        ants: [160, 192]
-        gbe: '10.41.0.106'
-        source_port: 10000
-    snap07:
-        ants: [192, 224]
-        gbe: '10.41.0.107'
-        source_port: 10000
-    snap08:
-        ants: [224, 256]
-        gbe: '10.41.0.108'
-        source_port: 10000
-    snap09:
-        ants: [256, 288]
-        gbe: '10.41.0.109'
-        source_port: 10000
-    snap10:
-        ants: [288, 320]
-        gbe: '10.41.0.110'
-        source_port: 10000
-    snap11:
-        ants: [320, 352]
-        gbe: '10.41.0.111'
-        source_port: 10000
-
-# configuration of x-engines (correlator beamformers) running on GPUs
-xengines:
-  xhosts: ["lxdlwagpu01", "lxdlwagpu02", "lxdlwagpu03", "lxdlwagpu04", "lxdlwagpu05", "lxdlwagpu06", "lxdlwagpu07", "lxdlwagpu08"]
-  nxpipeline: 4
-  arp:
-    # lwa-gpu01
-    10.41.0.65: 0x043f72d0b112
-    10.41.0.18: 0x043f72d0b10e
-    # lwa-gpu02
-    10.41.0.66: 0x043f72d0b106
-    10.41.0.17: 0x043f72d0b116
-    # lwa-gpu03
-    10.41.0.67: 0x043f72d0b0e2
-    10.41.0.19: 0x043f72d0b0f6
-    # lwa-gpu04
-    10.41.0.68: 0x043f72dfc1f4
-    10.41.0.20: 0x043f72ab3750
-    # lwa-gpu05
-    10.41.0.69: 0x043f72dfc2e4
-    10.41.0.21: 0x043f72dfc2a0
-    # lwa-gpu06
-    10.41.0.70: 0x043f72dfc1d4
-    10.41.0.22: 0x043f72dfc2e8
-    # lwa-gpu07
-    10.41.0.71: 0x043f72dfc308
-    10.41.0.23: 0x043f72dfc2d8
-    # lwa-gpu08
-    10.41.0.72: 0x043f72dfc300
-    10.41.0.24: 0x043f72dfc2a8
-  chans:
-    # lwa-gpu01
-    10.41.0.65-10000: [ 640,  736]
-    10.41.0.65-20000: [ 736,  832]
-    10.41.0.18-10000: [ 832,  928]
-    10.41.0.18-20000: [ 928, 1024]
-    # lwa-gpu02
-    10.41.0.66-10000: [1024, 1120]
-    10.41.0.66-20000: [1120, 1216]
-    10.41.0.17-10000: [1216, 1312]
-    10.41.0.17-20000: [1312, 1408]
-    # lwa-gpu03
-    10.41.0.67-10000: [1408, 1504]
-    10.41.0.67-20000: [1504, 1600]
-    10.41.0.19-10000: [1600, 1696]
-    10.41.0.19-20000: [1696, 1792]
-    # lwa-gpu04
-    10.41.0.68-10000: [1792, 1888]
-    10.41.0.68-20000: [1888, 1984]
-    10.41.0.20-10000: [1984, 2080]
-    10.41.0.20-20000: [2080, 2176]
-    # lwa-gpu05
-    10.41.0.69-10000: [2176, 2272]
-    10.41.0.69-20000: [2272, 2368]
-    10.41.0.21-10000: [2368, 2464]
-    10.41.0.21-20000: [2464, 2560]
-    # lwa-gpu06
-    10.41.0.70-10000: [2560, 2656]
-    10.41.0.70-20000: [2656, 2752]
-    10.41.0.22-10000: [2752, 2848]
-    10.41.0.22-20000: [2848, 2944]
-    # lwa-gpu07
-    10.41.0.71-10000: [2944, 3040]
-    10.41.0.71-20000: [3040, 3136]
-    10.41.0.23-10000: [3136, 3232]
-    10.41.0.23-20000: [3232, 3328]
-    # lwa-gpu08
-    10.41.0.72-10000: [3328, 3424]
-    10.41.0.72-20000: [3424, 3520]
-    10.41.0.24-10000: [3520, 3616]
-    10.41.0.24-20000: [3616, 3712]
-  x_dest_corr_name: ["lwacalim01", "lwacalim02", "lwacalim03", "lwacalim04", "lwacalim05", "lwacalim06", "lwacalim07", "lwacalim08"]  # where gpu servers send data (usually maps one-to-one from gpu to calim node)
-  x_dest_corr_slow_port: [10001, 10001, 10002, 10002]
-  x_dest_corr_fast_port: [11001, 11001, 11002, 11002]
-  x_dest_beam_ip: ["10.41.0.76", "10.41.0.76", "10.41.0.77", "10.41.0.77", "10.41.0.78", "10.41.0.78", "10.41.0.79", "10.41.0.79"]
-  x_dest_beam_port: [20001, 20002, 20001, 20002, 20001, 20002, 20001, 20002]
-  cal_directory: "/home/pipeline/caltables/latest/"   # location on destination server of calibration tables
-  update_interval: 15  # beamformer tracking update cadence in seconds
-
-# IP address of each data recorder server (used by x-eng control)
-drip_mapping:
-  lwacalim01: ["10.41.0.76"]
-  lwacalim02: ["10.41.0.77"]
-  lwacalim03: ["10.41.0.78"]
-  lwacalim04: ["10.41.0.79"]
-  lwacalim05: ["10.41.0.80"]
-  lwacalim06: ["10.41.0.81"]
-  lwacalim07: ["10.41.0.82"]
-  lwacalim08: ["10.41.0.83"]
-
-# Data recorder configuration
-dr:
-  recorders: ['drvs', 'dr1', 'dr2', 'dr3', 'dr4', 'dr5', 'dr6', 'dr7', 'dr8']  # Supported modes "drvs" (slow vis), "drvf" (fast vis), "dr1" (power beam)
+lwa_config_calim_nogpu2.yaml
