--- a/config/lwa_config_calim_standard.yaml
+++ b/config/lwa_config_calim_standard.yaml
@@ -131,7 +131,6 @@ xengines:
     10.41.0.24-10000: [3440, 3536]
     10.41.0.24-20000: [3536, 3632]
 
-#  x_dest_corr_name: ["lwacalim01", "lwacalim02", "lwacalim03", "lwacalim04", "lwacalim05", "lwacalim06", "lwacalim07", "lwacalim08"]  # where gpu servers send data (usually maps one-to-one from gpu to calim node)
   x_dest_corr_name:    # where gpu servers send data (usually maps one-to-one from gpu to calim node)
     lxdlwagpu01: lwacalim01
     lxdlwagpu02: lwacalim02
@@ -150,6 +149,7 @@ xengines:
 
 # IP address of each data recorder server (used by x-eng control)
 drip_mapping:
+  lwacalim00: "10.41.0.75"
   lwacalim01: "10.41.0.76"
   lwacalim02: "10.41.0.77"
   lwacalim03: "10.41.0.78"
@@ -158,6 +158,8 @@ drip_mapping:
   lwacalim06: "10.41.0.81"
   lwacalim07: "10.41.0.82"
   lwacalim08: "10.41.0.83"
+  lwacalim09: "10.41.0.84"
+  lwacalim10: "10.41.0.85"
 
 # Data recorder configuration
 dr:
