--- a/config/lwa_config_calim_interleave.yaml
+++ b/config/lwa_config_calim_interleave.yaml
@@ -217,4 +217,4 @@ drip_mapping:
 
 # Data recorder configuration
 dr:
-        recorders: ['drvs', 'drvf', 'dr1']  # Supported modes "drvs" (slow vis), "drvf" (fast vis), "dr1" up to 8 (power beam)
+    recorders: ['drvs', 'drvf', 'dr5']  # Supported modes "drvs" (slow vis), "drvf" (fast vis), "dr5" (ad hoc power beam)
